--- a/src/sass/object/component/_c-btn.scss
+++ b/src/sass/object/component/_c-btn.scss
@@ -1,7 +1,34 @@
 @use "global" as *;
 
 .c-btn {
-  padding: rem(10) rem(40);
-  background-color: black;
-  color: yellow;
+  background-color: white;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: rem(50);
+  font-size: rem(12.5);
+  font-weight: bold;
+  border-radius: rem(25);
+}
+
+.c-btn::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/arrow_black.png) center center / contain no-repeat;
+  width: rem(8);
+  height: rem(14);
+  top: 50%;
+  transform: translateY(-50%);
+  right: rem(14);
+}
+
+.c-btn--yellow {
+  background-color: $yellow;
+}
+
+.c-btn--shadow {
+  box-shadow: rem(3) rem(3) rem(3) rgba($color: #51514f, $alpha: 0.75);
+
 }
