--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -7,22 +7,22 @@
     </header>
     <main>
       <div class="l-mv">
-
+        <%- include('./project/_p-mv') %> 
       </div>
       <section class="l-concept">
-
+        <%- include('./project/_p-concept') %> 
       </section>
       <section class="l-training">
-
+        <%- include('./project/_p-training') %> 
       </section>
-      <section class="l-frivers">
-
+      <section class="l-drivers">
+        <%- include('./project/_p-drivers') %> 
       </section>
       <section class="l-environment">
         <%- include('./project/_p-environment') %> 
       </section>
       <div class="l-banners">
-
+        <%- include('./project/_p-banners') %> 
       </div>
       <div class="l-about">
         <%- include('./project/_p-about') %> 
