--- a/src/ejs/project/_p-about.ejs
+++ b/src/ejs/project/_p-about.ejs
@@ -1,25 +1,27 @@
 <div class="p-about">
     <div class="p-about__inner l-inner">
-        <h2 class="p-about__title">
-            <img src="./images/common/cambus.png" alt="cambus">
-        </h2>
-        <picture class="p-about__img">
-            <img src="./images/top/about_01.png" alt="">
-        </picture>
-        <div class="p-about__subtitle">
-            <%- include('../component/_c-subtitle',{
-                subtitle:'子どものワクワクをつくり<br>子育て世代のママ【たち】<br>を応援する'
-            }) %> 
-        </div>
-        <p class="p-about__text">
-            キャンバスは、移動託児型バスを軸に、子育てに特化したサービスや、企画をご提案しており、子どもに特化した各種サービスとの相性が良く、子どものワクワクを一緒に創り出す事が期待できます。
-        </p>
-        <div class="p-about__btn">
-            <%- include('../component/_c-btn',{
-                link:'#',
-                text:'CAM-BUSについて',
-                type:'yellow'
-            }) %> 
+        <div class="p-about__content">
+            <h2 class="p-about__title">
+                <img src="./images/common/cambus.png" alt="cambus">
+            </h2>
+            <picture class="p-about__img">
+                <img src="./images/top/about_01.png" alt="">
+            </picture>
+            <div class="p-about__subtitle">
+                <%- include('../component/_c-subtitle',{
+                    subtitle:'子どものワクワクをつくり<br>子育て世代のママ【たち】<br>を応援する'
+                }) %> 
+            </div>
+            <p class="p-about__text">
+                キャンバスは、移動託児型バスを軸に、子育てに特化したサービスや、企画をご提案しており、子どもに特化した各種サービスとの相性が良く、子どものワクワクを一緒に創り出す事が期待できます。
+            </p>
+            <div class="p-about__btn">
+                <%- include('../component/_c-btn',{
+                    link:'#',
+                    text:'CAM-BUSについて',
+                    type:'yellow'
+                }) %> 
+            </div>
         </div>
     </div>
 </div>
