--- a/src/ejs/common/_p-header.ejs
+++ b/src/ejs/common/_p-header.ejs
@@ -6,10 +6,13 @@
             </a>
         </h1>
         <div class="p-header__hamburger">
-            <div class="p-hamburger">
+            <div class="p-hamburger js-hamburger">
                 <span></span>
                 <span></span>
             </div>
+        </div>
+        <div class="p-header__drawer">
+            <%- include('./_p-drawer') %> 
         </div>
     </div>
 </div>
