--- a/src/sass/object/component/_c-btn.scss
+++ b/src/sass/object/component/_c-btn.scss
@@ -11,6 +11,13 @@
   font-size: rem(12.5);
   font-weight: bold;
   border-radius: rem(25);
+  transition: all 0.3s;
+
+  @include mq(md) {
+    height: rem(80);
+    font-size: rem(20);
+    border-radius: rem(40);
+  }
 }
 
 .c-btn::before {
@@ -22,6 +29,20 @@
   top: 50%;
   transform: translateY(-50%);
   right: rem(14);
+  transition: all 0.3s;
+
+  @include mq(md) {
+    right: rem(20);
+  }
+}
+
+.c-btn:hover {
+  background-color: $black;
+  color: $yellow;
+}
+
+.c-btn:hover::before {
+  background: url(../images/common/arrow_yellow.png) center center / contain no-repeat;
 }
 
 .c-btn--yellow {
