--- a/src/sass/object/component/_c-subtitle.scss
+++ b/src/sass/object/component/_c-subtitle.scss
@@ -9,6 +9,12 @@
     padding-bottom: rem(25);
     font-feature-settings: "palt";
     letter-spacing: 0.05em;
+
+    @include mq(md) {
+        font-size: rem(50);
+        padding-bottom: rem(40);
+        text-align: left;
+    }
 }
 
 .c-subtitle::before {
@@ -20,4 +26,9 @@
     transform: translateX(-50%);
     bottom: 0;
     background-color: $black;
+
+    @include mq(md) {
+        left: 0;
+        transform: translateX(0);
+    }
 }
