--- a/src/sass/object/component/_c-text.scss
+++ b/src/sass/object/component/_c-text.scss
@@ -1,6 +1,11 @@
 @use 'global' as *;
 
 .c-text {
-    font-size: rem(14);
+    font-size: rem(13);
     line-height: calc(81/27);
+
+    @include mq(md) {
+        font-size: rem(22);
+        line-height: 2;
+    }
 }
