--- a/src/sass/object/component/_c-title.scss
+++ b/src/sass/object/component/_c-title.scss
@@ -2,6 +2,9 @@
 
 .c-title {
     text-align: center;
+    @include mq(md) {
+        text-align: left;
+    }
 }
 
 .c-title--white {
@@ -12,6 +15,11 @@
     font-weight: bold;
     font-size: rem(15);
 
+    @include mq(md) {
+        font-size: rem(26);
+        text-align: left;
+    }
+
 }
 
 .c-title__en {
@@ -19,4 +27,8 @@
     font-size: rem(50);
     font-weight: 600;
     margin-top: rem(10);
+
+    @include mq(md) {
+        font-size: rem(100);
+    }
 }
