--- a/src/sass/object/layout/_l-environment.scss
+++ b/src/sass/object/layout/_l-environment.scss
@@ -1,9 +1,9 @@
 @use 'global' as *;
 
-.l-about {
+.l-environment {
     margin-top: rem(100);
 
     @include mq(md) {
-        margin-top: rem(300);
+        margin-top: rem(200);
     }
 }
