--- a/src/sass/object/project/_p-environment.scss
+++ b/src/sass/object/project/_p-environment.scss
@@ -1,11 +1,18 @@
 @use 'global' as *;
 
 .p-environment {
-    background: linear-gradient(to bottom,white 0%, white rem(170), $yellow rem(170),$yellow rem(680),white rem(680),white 100%);
+    background: linear-gradient(to bottom,white 0%, white rem(170), $yellow rem(170),$yellow rem(680),white rem(680),white 100%) ;
+    @include mq(md) {
+        background: linear-gradient(to left, white rem(300), transparent rem(300)), linear-gradient(to bottom,white 0%, white rem(100), $yellow rem(100),$yellow calc(100% - #{rem(100)}),white calc(100% - #{rem(100)}),white 100%) ;
+        padding-bottom: rem(295);
+    }
 }
 
-.p-environment__inner {
-
+.p-environment__inner.l-inner {
+    position: relative;
+    @include mq(md) {
+        padding-left: rem(190);
+    }
 }
 
 .p-environment__title {
@@ -14,18 +21,39 @@
 
 .p-environment__img {
     margin-top: rem(50);
+
+    @include mq(md) {
+        position: absolute;
+        width: 50.85%;
+        right: 0;
+        top: rem(200);
+    }
 }
 
 .p-environment__subtitle {
     margin-top: rem(20);
+
+    @include mq(md) {
+        margin-top: rem(50);
+    }
 }
 
 .p-environment__text {
     margin-top: rem(20);
+
+    @include mq(md) {
+        max-width: rem(559);
+        margin-top: rem(37);
+    }
 }
 
 .p-environment__btn {
     max-width: rem(187);
     margin: 0 auto;
     margin-top: rem(50);
+    @include mq(md) {
+        margin: initial;
+        margin-top: rem(60);
+        max-width: rem(300);
+    }
 }
