--- a/src/sass/object/project/_p-footer.scss
+++ b/src/sass/object/project/_p-footer.scss
@@ -4,10 +4,28 @@
     background-color: $black;
     padding-top: rem(50);
     padding-bottom: rem(20);
+
+    @include mq(md) {
+        padding-top: rem(67);
+        padding-bottom: 0;
+    }
 }
 
-.p-footer__inner {
+.p-footer a {
+    transition: all 0.3s;
+}
 
+.p-footer a:hover {
+    @include mq(md) {
+        opacity: 0.7;
+    }
+}
+
+.p-footer__inner.l-inner {
+    max-width: unset;
+    @include mq(md) {
+        max-width: rem(1715);
+    }
 }
 
 .p-footer__bigText {
@@ -17,6 +35,10 @@
     font-weight: 700;
     font-size: rem(17);
     line-height: 2;
+
+    @include mq(md) {
+        font-size: rem(30);
+    }
 }
 
 .p-footer__bigText span {
@@ -24,19 +46,42 @@
     font-size: rem(35);
     font-weight: 600;
     font-family: $en-font;
+
+    @include mq(md) {
+        font-size: rem(50);
+    }
 }
 
 .p-footer__external {
     margin-top: rem(50);
-}
+
+    @include mq(md) {
+        max-width: rem(760);
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        margin-top: rem(60);
+    }
+ }
 
 .p-footer__btns {
     display: grid;
     gap: rem(25);
+
+    @include mq(md) {
+        width: 76.315%;
+        grid-template-columns: repeat(2,1fr);
+        gap: rem(20);
+    }
 }
 
 .p-footer__btn {
     text-align: center;
+
+    @include mq(md) {
+        max-width: rem(280);
+        width: 100%;
+    }
 }
 
 .p-footer__btn a {
@@ -52,21 +97,38 @@
     font-family: $din;
     letter-spacing: 0.05em;
     border-radius: rem(37);
+
+    @include mq(md) {
+        font-size: rem(20);
+        height: rem(70);
+    }
 }
 
 .p-footer__btn:nth-child(1) a {
     font-size: rem(37);
+
+    @include mq(md) {
+        font-size: rem(32);
+    }
 }
 
 .p-footer__btn img {
     width: rem(29);
     margin-right: rem(20);
+
+    @include mq(md) {
+        margin-right: rem(17);
+    }
 }
 
 .p-footer__btn span {
     text-align: center;
     color: $white;
     line-height: rem(25);
+
+    @include mq(md) {
+        font-size: rem(16);
+    }
 }
 
 .p-footer__sns {
@@ -74,14 +136,28 @@
     justify-content: center;
     align-items: center;
     margin-top: rem(25);
+
+    @include mq(md) {
+        margin-top: rem(-25);
+        margin-left: rem(20);
+        width: calc(100% - 76.315% - #{rem(20)});
+    }
 }
 
 .p-footer__sns-link {
     width: rem(60);
+
+    @include mq(md) {
+        width: rem(70);
+    }
 }
 
 .p-footer__sns-link + .p-footer__sns-link {
     margin-left: rem(50);
+
+    @include mq(md) {
+        margin-left: rem(20);
+    }
 }
 
 .p-footer__sns-link a {
@@ -94,32 +170,91 @@
     align-items: center;
     justify-content: center;
     margin-top: rem(50);
+
+    @include mq(md) {
+        position: relative;
+        height: rem(68);
+        margin-top: rem(45);
+    }
+}
+
+.p-footer__links::before,
+.p-footer__links::after {
+    @include mq(md) {
+        position: absolute;
+        content: "";
+        width: 100vw;
+        height: 1px;
+        background-color: $white;
+        left: 0;
+        margin-left: calc(50% - 50vw);
+    }
+}
+
+.p-footer__links::before {
+    @include mq(md) {
+        top: 0;
+    }
+}
+
+.p-footer__links::after {
+    @include mq(md) {
+        bottom: 0;
+    }
 }
 
 .p-footer__link {
-    height: inherit;
+    height: inherit; 
 }
 
 .p-footer__link a {
+    height: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: $white;
     font-size: rem(13);
+
+    @include mq(md) {
+        font-size: rem(18);
+    }
 }
 
 .p-footer__link + .p-footer__link {
     margin-left: rem(38);
+
+    @include mq(md) {
+        margin-left: rem855;
+    }
 }
 
 .p-footer__bottom {
 
+    @include mq(md) {
+        height: rem(68);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
 }
 
 .p-footer__bottom-wrap {
+
+    @include mq(md) {
+        display: flex;
+        align-items: center;
+    }
 
 }
 
 .p-footer__logo {
     max-width: rem(278);
     margin: 0 auto;
+
+    @include mq(md) {
+        max-width: rem(225);
+    }
 }
 
 .p-footer__address {
@@ -127,6 +262,12 @@
     color: $white;
     font-size: rem(14);
     margin-top: rem(11);
+
+    @include mq(md) {
+        margin-top: 0;
+        font-size: rem(18);
+        margin-left: rem(25);
+    }
 }
 
 .p-footer__copy {
@@ -134,4 +275,9 @@
     text-align: center;
     color: $white;
     margin-top: rem(47);
+
+    @include mq(md) {
+        margin-top: 0;
+        font-size: rem(18);
+    }
 }
