--- a/src/ejs/project/_p-concept.ejs
+++ b/src/ejs/project/_p-concept.ejs
@@ -7,13 +7,13 @@
                 title:'CONCEPT'
             }) %> 
         </div>
-        <p class="p-concept__subtitle">
+        <p class="p-concept__subtitle js-scroll-fade">
             タクシー業界に<br>新しい風を!!
         </p>
         <picture class="p-concept__img">
             <img src="./images/top/concept_01.jpg" alt="タクシー業界に新しい風を！">
         </picture>
-        <div class="p-concept__content">
+        <div class="p-concept__content js-scroll-fade">
             <p class="p-concept__text c-text">
                 タクシードライバーって年配の方が多いイメージがありませんか？<br class="u-desktop">実は知られていないだけで、タクシー業界は仕事と私生活を柔軟に<br class="u-desktop">連動させる事ができ、<span>ワークライフバランス</span>が取れるため、若い方の価値観と合っている業界です。<br class="u-desktop">仕事と私生活の両立を図りながら、未経験者はもとより経験者の方も一緒にタクシー業界のイメージを変えませんか？
             </p>
