--- a/src/ejs/project/_p-drivers.ejs
+++ b/src/ejs/project/_p-drivers.ejs
@@ -7,15 +7,15 @@
                 title:'DRIVERS'
             }) %> 
         </div>
-        <div class="p-drivers__subtitle">
+        <div class="p-drivers__subtitle js-scroll-fade">
             <%- include('../component/_c-subtitle',{
                 subtitle:'先輩ドライバーへの<br class="u-mobile">インタビュー'
             }) %> 
         </div>
-        <p class="p-drivers__text c-text">
+        <p class="p-drivers__text c-text js-scroll-fade">
             枚岡交通で働く先輩ドライバーにインタビューしました。入社動機、やりがい、働き方、入社して良かった事など、それぞれの思いをご覧ください。
         </p>
-        <div class="p-drivers__slider js-drivers-slider">
+        <div class="p-drivers__slider js-drivers-slider js-scroll-fade">
             <div class="p-drivers__item">
                 <picture class="p-drivers__item-img">
                     <source srcset="./images/top/drivers_01_pc.jpg" media="(min-width:768px)">
