--- a/src/ejs/project/_p-mv.ejs
+++ b/src/ejs/project/_p-mv.ejs
@@ -3,10 +3,26 @@
         <h2 class="p-mv__title">
             WORK LIFE<br class="u-mobile">BALANCE
         </h2>
-        <p class="p-mv__subtitle u-mobile">
-            きっと見つかる<br>君にピッタリの働き方
-        </p>
         <p class="p-mv__subtitle u-desktop">
+            ワークライフバランス<br>
+            きっと見つかる<br>
+            君にピッタリの働き方!
+            <span>
+                WORK LIFE BALANCE<br>
+                I'm sure you'll find　The perfect way to work for you
+            </span>
+        </p>
+        <div class="p-mv__middle">
+            <picture class="p-mv__img">
+                <img src="./images/top/mv_01.png" alt="きっと見つかる君にピッタリの働き方">
+            </picture>
+            <div class="p-mv__entryBtn">
+                <a href="#">
+                    <img src="./images/common/entry_btn.png" alt="応募する">
+                </a>
+            </div>
+        </div>
+        <p class="p-mv__subtitle u-mobile">
             ワークライフバランス<br>
             きっと見つかる<br>
             君にピッタリの働き方
@@ -15,9 +31,6 @@
                 I'm sure you'll find　The perfect way to work for you
             </span>
         </p>
-        <picture class="p-mv__img">
-            <img src="./images/top/mv_01.png" alt="きっと見つかる君にピッタリの働き方">
-        </picture>
         <button class="p-mv__scroll">
             <span>SCROLL DOWN</span>
         </button>
