--- a/src/ejs/project/_p-training.ejs
+++ b/src/ejs/project/_p-training.ejs
@@ -21,12 +21,12 @@
                     title:'TRAINING'
                 }) %> 
             </div>
-            <div class="p-training__subtitle">
+            <div class="p-training__subtitle js-scroll-fade">
                 <%- include('../component/_c-subtitle',{
                     subtitle:'安心のサポート体制'
                 }) %> 
             </div>
-            <p class="p-training__text c-text">
+            <p class="p-training__text c-text js-scroll-fade">
                 枚岡交通なら、二種免許取得するための取得費用は会社が負担します。また、免許取得期間中も給与をお支払いするので、お金をもらいながら取得でき、安心してタクシーのお仕事をスタートしていただけます。
             </p>
             <button class="p-training__btn">
