--- a/src/ejs/project/_p-environment.ejs
+++ b/src/ejs/project/_p-environment.ejs
@@ -7,15 +7,15 @@
                 type:''
             }) %> 
         </div>
-        <picture class="p-environment__img">
+        <picture class="p-environment__img js-scroll-fade">
             <img src="./images/top/environment_01.jpg" alt="社内環境">
         </picture>
-        <div class="p-environment__subtitle">
+        <div class="p-environment__subtitle js-scroll-fade">
             <%- include('../component/_c-subtitle',{
                 subtitle:'社内の雰囲気や福利厚生'
             }) %> 
         </div>
-        <p class="p-environment__text c-text">
+        <p class="p-environment__text c-text js-scroll-fade">
             年に1回のもちつき大会やBBQなどのレクリエーションも多数あります！家族や時には地域の皆様を巻き込んで行うので、一気に距離が縮まります！
         </p>
         <div class="p-environment__btn">
