--- a/src/sass/object/project/_p-mv.scss
+++ b/src/sass/object/project/_p-mv.scss
@@ -3,64 +3,130 @@
 .p-mv {
     padding-top: rem(67.5);
     padding-bottom: rem(65);
+    overflow: hidden;
+    background-color: #c8d5da;
 
     @include mq(md) {
-        padding-top: rem(80);
+        padding-top: rem(140);
     }
 }
 
-.p-mv__inner {
-
+.p-mv__inner.l-inner {
+    max-width: unset;
+    @include mq(md) {
+        max-width: rem(1500);
+    }
 }
 
 .p-mv__title {
-    font-size: rem(75);
+    width: 102vw;
+    margin-left: calc(50% - 51vw);
+    font-size: 24vw;
     font-family: $en-font;
     color: $yellow;
 
     @include mq(md) {
+        width: auto;
+        margin-left: initial;
         font-size: rem(150);
     }
 }
 
 .p-mv__subtitle {
-    font-size: rem(25);
+    font-size: 7.46vw;
     font-weight: bold;
     font-family: $sub-font;
-    text-align: center;
     line-height: calc(70/50);
-    margin-top: rem(16);
+    margin-top: rem(25);
 
     @include mq(md) {
         font-size: rem(70);
         line-height: calc(105 / 70);
-        text-align: left;
-        margin-top: rem(120);
-        margin-left: rem(52);
+        margin-top: rem(83);
     }
 }
 
 .p-mv__subtitle span {
+    display: block;
+    font-size: 3.73vw;
+    font-family: $en-font;
+    margin-top: rem(25);
     @include mq(md) {
-        display: block;
-        font-size: rem(20);
+        font-size: rem(24);
         line-height: calc(35/20);
-        font-family: $en-font;
         margin-top: rem(20);
     }
 }
 
-.p-mv__img {
-    max-width: rem(220);
-    margin: 0 auto;
-    margin-top: rem(24);
-
+.p-mv__middle {
+    display: flex;
+    align-items: flex-end;
+    margin-top: rem(-18);
     @include mq(md) {
         position: absolute;
-        max-width: rem(500);
+        width: 50%;
         margin-top: 0;
         top: rem(450);
-        right: calc(50% - #{rem(447)});
+        right: rem(35);
+    }
+}
+
+.p-mv__img {
+    max-width: 53vw;
+    margin-left: rem(25);
+    animation: bu-bu- 3s infinite linear .8s;
+    
+    @include mq(md) {
+        width: rem(500);
+        max-width: rem(500);
+    }
+}
+
+.p-mv__entryBtn {
+    width: 37.33vw;
+    margin-left: rem(-16);
+    margin-right: calc(50% - #{rem(270)});
+    animation: fuwafuwa 3s infinite linear .8s alternate;
+    @include mq(md) {
+        width: rem(330);
+        margin-right: 0;
+        margin-left: rem(15);
+        transition: all 0.3s;
+    }
+}
+
+.p-mv__entryBtn:hover {
+    @include mq(md) {
+        opacity: 0.9;
+    }
+}
+
+@keyframes fuwafuwa {
+    0% {
+      transform:translate(0, 0) rotate(-10deg);
+    }
+    50% {
+      transform:translate(0, rem(-7)) rotate(2deg);
+    }
+    100% {
+      transform:translate(0, 0) rotate(10deg);
+    }
+}
+
+@keyframes bu-bu- {
+    0% {
+      opacity: 0;
+      transform:translateX(100%);
+    }
+    5% {
+        opacity: 1;
+    }
+    95% {
+        opacity: 1;
+    }
+    100% {
+      transform:translateX(0%);
+      opacity: 0;
     }
 }
 
@@ -69,6 +135,8 @@
     text-align: center;
     margin: 0 auto;
     margin-top: rem(70);
+    z-index: 1;
+    cursor: default;
 
     @include mq(md) {
         margin-top: rem(155);
@@ -140,10 +208,11 @@
 .p-mv__entry {
     display: none;
     @include mq(md) {
-        display: block;
+        position: fixed;
+        z-index: 999;
         max-width: rem(380);
         width: 100%;
-        margin-left: auto;
-        margin-top: rem(-55);
+        bottom: rem(100);
+        right: rem(100);
     }
 }
