--- a/src/ejs/common/_p-drawer.ejs
+++ b/src/ejs/common/_p-drawer.ejs
@@ -30,7 +30,7 @@
             <a href="#">CAM-BUS　/　<span>キャンバスについて</span></a>
         </li>
     </ul>
-    <div class="p-drawer__entry c-entryBtn js-entry">
+    <div class="p-drawer__entry c-entryBtn js-entryBtn">
         <a href="#">
             <img src="./images/common/entry_icon.png" alt="応募する">
             <p>ENTRY | 応募する</p>
