--- a/src/ejs/component/_c-title.ejs
+++ b/src/ejs/component/_c-title.ejs
@@ -3,6 +3,16 @@
         <p class="c-title__ja"><%= subtitle %> </p>
         <h2 class="c-title__en"><%= title %></h2>
     </div>
+<% } else if ( type === "center"){ %>
+    <div class="c-title c-title--center">
+        <p class="c-title__ja"><%= subtitle %> </p>
+        <h2 class="c-title__en"><%= title %></h2>
+    </div>
+<% } else if ( type === "whiteCenter"){ %>
+    <div class="c-title c-title--center c-title--white">
+        <p class="c-title__ja"><%= subtitle %> </p>
+        <h2 class="c-title__en"><%= title %></h2>
+    </div>
 <% } else { %>
     <div class="c-title">
         <p class="c-title__ja"><%= subtitle %> </p>
