--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -7,6 +7,9 @@
 </header>
 
 <main>
+  <section class="l-subEnvironment-mv">
+    <%- include('./project/_p-subEnvironment-mv') %> 
+  </section>
 
 </main>
 
