--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -8,8 +8,12 @@
 
 <main>
   <section class="l-subEnvironment-mv">
-    <%- include('./project/_p-subEnvironment-mv') %> 
+    <%- include('./project/_p-subEnvironment-mv') %>
   </section>
+
+  <div class="l-subEnvironment-links">
+    <%- include('./project/_p-subEnvironment-links') %>
+  </div>
 
 </main>
 
