働き方大枠作成

--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -15,6 +15,19 @@
     <%- include('./project/_p-subEnvironment-links') %>
   </div>
 
+  <section class="l-subEnvironment-workStyle">
+    <%- include('./project/_p-subEnvironment-workStyle') %>
+  </section>
+
+  <section class="l-subEnvironment-workStyle">
+    <%- include('./project/_p-subEnvironment-workStyle') %>
+  </section>
+  
+  <section class="l-subEnvironment-workStyle">
+    <%- include('./project/_p-subEnvironment-workStyle') %>
+  </section>
+
+
 </main>
 
 <footer class="l-footer">
