その他メリット大枠作成

--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -22,10 +22,15 @@
   <section class="l-subEnvironment-workStyle">
     <%- include('./project/_p-subEnvironment-workStyle') %>
   </section>
-  
+
   <section class="l-subEnvironment-workStyle">
     <%- include('./project/_p-subEnvironment-workStyle') %>
   </section>
+
+  <section class="l-subEnvironment-merit">
+    <%- include('./project/_p-subEnvironment-merit') %>
+  </section>
+
 
 
 </main>
