エントリー大枠作成

--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -32,6 +32,10 @@
   </section>
 
 
+  <div class="l-subEnvironment-entry">
+    <%- include('./project/_subEnvironment-entry') %>
+  </div>
+
 
 </main>
 
