--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -7,8 +7,8 @@
 </header>
 
 <main>
-  <section class="l-subEnvironment-mv">
-    <%- include('./project/_p-subEnvironment-mv') %>
+  <section class="l-subMv">
+    <%- include('./project/_p-subMv') %>
   </section>
 
   <div class="l-subEnvironment-links">
