--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -11,8 +11,8 @@
     <%- include('./project/_p-subMv') %>
   </section>
 
-  <div class="l-subEnvironment-links">
-    <%- include('./project/_p-subEnvironment-links') %>
+  <div class="l-workStyle-links">
+    <%- include('./project/_p-workStyle-links') %>
   </div>
 
   <section class="l-subEnvironment-workStyle">
