--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -10,28 +10,21 @@
   <section class="l-subMv">
     <%- include('./project/_p-subMv') %>
   </section>
-
   <div class="l-workStyle-links">
     <%- include('./project/_p-workStyle-links') %>
   </div>
-
-  <section class="l-subEnvironment-workStyle">
-    <%- include('./project/_p-subEnvironment-workStyle') %>
+  <section class="l-workStyle">
+    <%- include('./project/_p-workStyle') %>
   </section>
-
-  <section class="l-subEnvironment-workStyle">
-    <%- include('./project/_p-subEnvironment-workStyle') %>
+  <section class="l-workStyle">
+    <%- include('./project/_p-workStyle') %>
   </section>
-
-  <section class="l-subEnvironment-workStyle">
-    <%- include('./project/_p-subEnvironment-workStyle') %>
+  <section class="l-workStyle">
+    <%- include('./project/_p-workStyle') %>
   </section>
-
   <section class="l-subEnvironment-merit">
     <%- include('./project/_p-subEnvironment-merit') %>
   </section>
-
-
   <div class="l-subEnvironment-entry">
     <%- include('./project/_subEnvironment-entry') %>
   </div>
