--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -22,8 +22,8 @@
   <section class="l-workStyle">
     <%- include('./project/_p-workStyle') %>
   </section>
-  <section class="l-subEnvironment-merit">
-    <%- include('./project/_p-subEnvironment-merit') %>
+  <section class="l-environmentMmerit">
+    <%- include('./project/_p-environmentMmerit') %>
   </section>
   <div class="l-subEnvironment-entry">
     <%- include('./project/_subEnvironment-entry') %>
