--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -25,11 +25,9 @@
   <section class="l-environmentMmerit">
     <%- include('./project/_p-environmentMmerit') %>
   </section>
-  <div class="l-subEnvironment-entry">
-    <%- include('./project/_subEnvironment-entry') %>
+  <div class="l-environmentEntry">
+    <%- include('./project/_p-environmentEntry') %>
   </div>
-
-
 </main>
 
 <footer class="l-footer">
