subMV:写真＋画像追加

--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -13,13 +13,13 @@
   <div class="l-workStyle-links">
     <%- include('./project/_p-workStyle-links') %>
   </div>
-  <section class="l-workStyle">
+  <section class="l-workStyle"><!-- =====12日勤務===== -->
     <%- include('./project/_p-workStyle') %>
   </section>
-  <section class="l-workStyle">
+  <section class="l-workStyle"><!-- =====夜間勤務===== -->
     <%- include('./project/_p-workStyle') %>
   </section>
-  <section class="l-workStyle">
+  <section class="l-workStyle"><!-- =====17日勤務===== -->
     <%- include('./project/_p-workStyle') %>
   </section>
   <section class="l-environmentMmerit">
