コード整理

--- a/src/ejs/project/_p-subMv.ejs
+++ b/src/ejs/project/_p-subMv.ejs
@@ -1,6 +1,3 @@
 <div class="p-subMV">
-  <div class="p-subMV__text">
-    <h2 class="p-subMV__main-text">environment</h2>
-    <p class="p-subMV__sub-text">社内環境</p>
-  </div><!-- text -->
+    <h2 class="p-subMV__main-text" data-ja="社内環境">environment</h2>
 </div>
