--- a/src/ejs/project/_p-subMv.ejs
+++ b/src/ejs/project/_p-subMv.ejs
@@ -1,3 +1,3 @@
 <div class="p-subMV">
-    <h2 class="p-subMV__main-text" data-ja="社内環境">environment</h2>
+    <h2 class="p-subMV__text" data-ja="社内環境">environment</h2>
 </div>
