--- a/src/sass/object/project/_p-subMV.scss
+++ b/src/sass/object/project/_p-subMV.scss
@@ -12,6 +12,19 @@
 	}
 }
 
+.p-subMV::after {
+position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+content:' ';
+width: 100%;
+height: 100%;
+background: #000;
+opacity: 0.4;
+}
+
 .p-subMV__text {
 	position: absolute;
 	z-index: 3;
