--- a/src/sass/object/layout/_l-subMv.scss
+++ b/src/sass/object/layout/_l-subMv.scss
@@ -1,9 +1,9 @@
-@use 'global' as *;
+@use 'global'as *;
 
 .l-subMv {
-   margin-top: rem(67.5);
+  margin-top: rem(67.5);
 
   @include mq('md') {
-    margin-top: rem(200);
+    margin-top: 0;
   }
 }
