--- a/src/sass/object/project/_p-workStyle-links.scss
+++ b/src/sass/object/project/_p-workStyle-links.scss
@@ -1,27 +1,24 @@
-
 @use "global"as *;
 
 
-.p-workStyle-links {
-
-}
+.p-workStyle-links {}
 
 .p-workStyle-links_link {
   position: relative;
   display: inline-block;
   width: rem(170);
-  padding:rem(50) rem(10) rem(15);
+  padding: rem(50) rem(10) rem(15);
   max-width: 100%;
   background-color: $yellow;
 }
 
 .p-workStyle-links_link::before {
-  content:'';
+  content: '';
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
-  width:calc(100% - rem(10));
+  width: calc(100% - rem(10));
   max-width: 100%;
   height: calc(100% - rem(10));
   border: 0.88px solid $black;
@@ -32,14 +29,27 @@
 }
 
 .p-workStyle-links_link-text {
+  position: relative;
   font-size: rem(16);
   font-weight: bold;
   line-height: 1.75;
 }
 
+.p-workStyle-links_link-text::after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  left: 0;
+  right: 0;
+  bottom: rem(-1);
+  width: 100%;
+  height: rem(1.69);
+  background-color: $black;
+}
+
 .p-workStyle-links_link-subText {
-font-size: rem(10);
-line-height: 1.75;
+  font-size: rem(10);
+  line-height: 1.75;
 }
 
 .p-workStyle-links_link-arrow {
