--- a/src/sass/object/project/_p-workStyle-links.scss
+++ b/src/sass/object/project/_p-workStyle-links.scss
@@ -5,9 +5,9 @@
 
 .p-workStyle-links_link {
   position: relative;
-  display: inline-block;
+  display: block;
   width: rem(170);
-  padding: rem(50) rem(10) rem(15);
+  padding: rem(50) rem(10) rem(20);
   max-width: 100%;
   background-color: $yellow;
 }
@@ -25,7 +25,8 @@
 }
 
 .p-workStyle-links_link span {
-  display: inline-block;
+  display:block;
+  text-align: center;
 }
 
 .p-workStyle-links_link-text {
@@ -38,7 +39,6 @@
 .p-workStyle-links_link-text::after {
   content: '';
   position: absolute;
-  display: inline-block;
   left: 0;
   right: 0;
   bottom: rem(-1);
@@ -53,17 +53,12 @@
 }
 
 .p-workStyle-links_link-arrow {
-  position: relative;
-  display: inline-block;
-  padding: 10px;
-}
-
-.p-workStyle-links_link-arrow::before {
-  content: '';
-  position: absolute;
   width: rem(15);
   height: rem(15);
+  margin: 0 auto;
+  border: 0;
   border-top: solid 2px $black;
   border-right: solid 2px $black;
-  transform: rotate(135deg);
+  transform: rotate(135deg); 
+  margin-top: rem(28.5);
 }
