--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -1,3 +1,6 @@
-<div class="">
-  働き方だよ
+<div class="p-workStyle">
+  <div class="p-workStyle__section-header">
+    <h2 class="p-workStyle__title">隔日勤務/12日勤務</h2>
+    <span class="p-workStyle__subtitle">時間を優先したい人の働き方</span>
+  </div>
 </div>
