--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -24,11 +24,12 @@ padding: rem(17.5) 0;
   transform: translateX(-50%);
   bottom: rem(-1);
   width: rem(269.2895);
-  height: rem(1.69);
+  height: rem(1.795);
   background-color: $black;
 }
 
 .p-workStyle__subtitle {
   font-size: rem(17.5);
   line-height: 1.75;
+  padding-top: rem(10);
 }
