workStyle:とりあえずコピペ

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -1,6 +1,33 @@
 <div class="p-workStyle">
+
   <div class="p-workStyle__section-header">
     <h2 class="p-workStyle__title">隔日勤務/12日勤務</h2>
     <span class="p-workStyle__subtitle">時間を優先したい人の働き方</span>
   </div>
+<div class="p-history__main">
+    <div class="p-history__units">
+      <div class="p-history__unit">
+        <p class="p-history__date">1970年2月</p>
+        <p class="p-history__text"> 千代田区神田神保町（場所）にポスター・パネル・マスコット人形の製造販売業として創業 </p>
+      </div>
+      <div class="p-history__unit">
+        <p class="p-history__date">1978年8月</p>
+        <p class="p-history__text"> 本社を東京都福生市に移転。SP商品製造販売業を開始。 </p>
+      </div>
+      <div class="p-history__unit">
+        <p class="p-history__date">1981年5月</p>
+        <p class="p-history__text"> 有限会社　タカショウ設立 </p>
+      </div>
+      <div class="p-history__unit">
+        <p class="p-history__date">2003年1月</p>
+        <p class="p-history__text"> 本社を東京都昭島市拝島町に移転 </p>
+      </div>
+      <div class="p-history__unit">
+        <p class="p-history__date">2020年2月</p>
+        <p class="p-history__text"> 創業50周年を迎える </p>
+      </div>
+    </div>
+  </div>
+
+
 </div>
