--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -1,11 +1,10 @@
-
 @use "global"as *;
 
 .p-workStyle__section-header {
-width: 100%;
-text-align: center;
-background-color: #F4F4E2;
-padding: rem(17.5) 0;
+  width: 100%;
+  text-align: center;
+  background-color: #F4F4E2;
+  padding: rem(17.5) 0;
 }
 
 .p-workStyle__title {
@@ -32,4 +31,147 @@ padding: rem(17.5) 0;
   font-size: rem(17.5);
   line-height: 1.75;
   padding-top: rem(10);
+}
+
+
+
+//とりあえずコピペ
+
+.p-history__main {
+  font-size: 16px;
+  font-family: 游ゴシック体, YuGothic, 游ゴシック, "Yu Gothic", sans-serif;
+  color: #000;
+  line-height: 1;
+  text-rendering: optimizeSpeed;
+  box-sizing: border-box;
+  position: relative;
+  transition: all 1s cubic-bezier(0.155, 0.91, 0.695, 0.95);
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.p-history__units {
+  font-size: 16px;
+  font-family: 游ゴシック体, YuGothic, 游ゴシック, "Yu Gothic", sans-serif;
+  color: #000;
+  line-height: 1;
+  text-rendering: optimizeSpeed;
+  box-sizing: border-box;
+  margin-top: 2.375rem;
+  padding-bottom: 5.625rem;
+  position: relative;
+  margin-left: calc(50% - 50vw);
+  width: 100vw;
+
+  @include mq('md') {
+    margin-top: 38px;
+    margin-top: 2.375rem;
+    padding-bottom: 90px;
+    padding-bottom: 5.625rem;
+    width: 100%;
+  }
+}
+
+.p-history__units::before {
+  background-color: #707070;
+  content: "";
+  height: 100%;
+  left: 5%;
+  position: absolute;
+  top: 0;
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+  width: 1px;
+  width: 0.0625rem;
+
+  @include mq('md') {
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+  }
+}
+
+.p-history__unit {
+  font-size: 16px;
+  font-family: 游ゴシック体, YuGothic, 游ゴシック, "Yu Gothic", sans-serif;
+  color: #000;
+  line-height: 1;
+  text-rendering: optimizeSpeed;
+  box-sizing: border-box;
+  margin-left: auto;
+  width: 100%;
+
+  @include mq('md') {
+    margin-left: auto;
+    width: 50%;
+  }
+}
+.p-history__unit:nth-child(even) {
+  margin-left: 0;
+}
+
+.p-history__date {
+  font-family: 游ゴシック体, YuGothic, 游ゴシック, "Yu Gothic", sans-serif;
+  line-height: 1;
+  text-rendering: optimizeSpeed;
+  box-sizing: border-box;
+  margin: 0;
+  color: #216F00;
+  font-weight: bold;
+  padding: 0 3.9375rem 0.75rem 1.9375rem;
+  position: relative;
+  font-size: 1.25rem;
+
+}
+
+.p-history__date::before {
+  background-color: #707070;
+  bottom: 0;
+  content: "";
+  height: 1px;
+  height: 0.0625rem;
+  left: 5%;
+  position: absolute;
+  width: 95%;
+
+
+  @include mq('md') {
+    left: 0;
+    width: 100%;
+
+  }
+}
+
+.p-history__date::after {
+  background-color: #216F00;
+  border-radius: 50%;
+  bottom: -8.5px;
+  bottom: -0.53125rem;
+  content: "";
+  height: 17px;
+  height: 1.0625rem;
+  left: -8.5px;
+  left: -0.53125rem;
+  position: absolute;
+  width: 17px;
+  width: 1.0625rem;
+
+  @include mq('md') {
+    bottom: -0.3125rem;
+    height: 0.625rem;
+    left: calc(5% - 0.3125rem);
+    width: 0.625rem;
+  }
+}
+
+.p-history__text {
+  font-family: 游ゴシック体, YuGothic, 游ゴシック, "Yu Gothic", sans-serif;
+  color: #000;
+  text-rendering: optimizeSpeed;
+  box-sizing: border-box;
+  margin: 0;
+  line-height: 1.5;
+  font-size: 1rem;
+  margin-top: 0.625rem;
+  padding: 0 1.875rem 0 3.75rem;
 }
