workStyle:time画像取り込み

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -7,6 +7,7 @@
 <div class="p-history__main">
     <div class="p-history__units">
       <div class="p-history__unit">
+        <img src="" alt="">
         <p class="p-history__date">1970年2月</p>
         <p class="p-history__text"> 千代田区神田神保町（場所）にポスター・パネル・マスコット人形の製造販売業として創業 </p>
       </div>
