workStyle:点線画像追加

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -4,12 +4,13 @@
     <h2 class="p-workStyle__title">隔日勤務/12日勤務</h2>
     <span class="p-workStyle__subtitle">時間を優先したい人の働き方</span>
   </div>
-<div class="p-history__main">
+  <div class="p-history__main">
     <div class="p-history__units">
       <div class="p-history__unit">
-        <img src="" alt="">
-        <p class="p-history__date">1970年2月</p>
-        <p class="p-history__text"> 千代田区神田神保町（場所）にポスター・パネル・マスコット人形の製造販売業として創業 </p>
+        <img src="images/environment/workStyle_time730.png" alt="7:30">
+          <p class="p-history__date">出社</p>
+          <p class="p-history__text"> 6:00〜8:00の間で自由に出社時間を選べます。<br>
+            ・点検などの準備 </p>
       </div>
       <div class="p-history__unit">
         <p class="p-history__date">1978年8月</p>
