--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -62,7 +62,7 @@
 }
 
 .p-history__units::before {
-  background-color: #707070;
+  background-color:$yellow;
   content: "";
   height: 100%;
   left: 5%;
@@ -79,8 +79,6 @@
 }
 
 .p-history__unit {
-  color: #000;
-  line-height: 1;
   margin-left: auto;
   width: 100%;
 
@@ -93,12 +91,16 @@
   margin-left: 0;
 }
 
+// .p-history__description {
+//   display: flex;
+// }
+
 .p-history__date {
   line-height: 1;
   margin: 0;
-  color: #216F00;
+  color: $black;
   font-weight: bold;
-  padding: 0 3.9375rem 0.75rem 1.9375rem;
+  padding:  rem(27.5) 0 0 rem(92);
   position: relative;
   font-size: 1.25rem;
 
@@ -122,8 +124,7 @@
   }
 }
 
-.p-history__date::before {
-  content: attr(data-time);
+.p-history__unit img {
   position: absolute;
   width: rem(72);
   height: rem(72);
@@ -131,6 +132,16 @@
   background-color: $yellow;
   top: 0;
   left: 0;
+
+// .p-history__date::before {
+//   content: attr(data-time);
+//   position: absolute;
+//   width: rem(72);
+//   height: rem(72);
+//   border-radius: 50%;
+//   background-color: $yellow;
+//   top: 0;
+//   left: 0;
 
 
   @include mq('md') {
@@ -145,6 +156,6 @@
   margin: 0;
   line-height: 1.5;
   font-size: 1rem;
-  margin-top: 0.625rem;
-  padding: 0 1.875rem 0 3.75rem;
+  margin-top: rem(5);
+  padding: 0 0 0 rem(92);
 }
